hides scrollbars and fixes name going out of screen

--- a/components/PetSelector/PetSelector.module.css
+++ b/components/PetSelector/PetSelector.module.css
@@ -6,6 +6,7 @@
 	padding: 1rem 0 0rem 1rem;
 	position: absolute;
 	bottom: 0;
+	scrollbar-width: none;
 }
 
 .petSelectorContainer::-webkit-scrollbar {
@@ -56,7 +57,7 @@
 		position: relative;
 		padding: 0;
 		max-width: 704px;
-		margin: 2rem auto 0 auto;
+		margin: 0 auto;
 		flex-flow: row nowrap;
 		justify-content: center;
 	}
